# Boutik

./: .gitignore  package.json  pnpm-lock.yaml
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: next.config.js  package.json  tailwind.config.js
apps/web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  export-detail.json  images-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
apps/web/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
apps/web/.next/server/app/: _not-found.html  _not-found.rsc  access-code.html  access-code.rsc  achats.rsc  auth.rsc  bons-commande.rsc  clients.html  clients.rsc  dashboard.rsc  depenses.html  documents.html  documents.rsc  factures.html  fournisseurs.rsc  index.rsc  page.js  (+10 more)
apps/web/scripts/: native-build.js
apps/web/src/app/: globals.css  layout.js  page.jsx
apps/web/src/components/: AppUpdatePrompt.jsx  DateFilter.jsx  DesktopDownloadBanner.jsx  DocumentPrintOptions.jsx  FrenchInput.jsx  GuaranteePicker.jsx  PaymentBreakdownInput.jsx  PhoneInput.jsx
apps/web/src/context/: store.js
apps/web/src/lib/: demo.js
scripts/: publish-desktop-release.mjs
(+200 files in other folders)
