[package]
name = "boutik_desktop"
version = "0.1.0"
description = "Boutik Desktop"
authors = ["Abdurrahman Nabil Ibrahim", "Mouhamadou Nassirou Ousmane Bawa"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
