[package]
name = "boutik_desktop"
version = "0.1.5"
description = "Boutik Desktop"
authors = ["Abdurrahman Nabil Ibrahim", "Mouhamadou Nassirou Ousmane Bawa"]
edition = "2026"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
